优化settings部分